@@ -2,6 +2,7 @@ Revision history for CGI-Info
 
 0.55	Thu Jun 11 17:33:10 EDT 2015
 	protocol() - Don't warn when not running as a CGI script
+	Added more explicit catching of XSS and SQL injection attempts
 
 0.54	Wed Jun  3 13:10:59 EDT 2015
 	Fix --tablet option
